Fix misalignment by removing p tags from 'filters' text replacing with div element. Leads to desired alignment vertically

--- a/client/src/components/header/Header.css
+++ b/client/src/components/header/Header.css
@@ -43,6 +43,7 @@
 
 	display: flex;
 	justify-content: flex-end;
+	align-items: center;
 	margin-top: 1.5em;
 	padding-right: .5em;
 }
